--- a/Artifacts04.css
+++ b/Artifacts04.css
@@ -10,18 +10,16 @@ form {
 	position: relative;
 	z-index: 1;
 	background: #DCDCDC;
-	max-width: 0 auto 100px;
 	padding: 40px 50px;
 	text-align:center;
 	border-radius: 8px;
 	margin: 100px 350px;
 }
 td input{
-	margin-right:50px;
+	margin-right:150px;
 	text-align:left;
 	margin-left:50px;
 	padding:10px;
-	padding-left:100px;
 }
 td{
 	text-align:left;
@@ -39,7 +37,7 @@ button{
 	border:0;
 	padding:15px;
 	color: white;
-	font-size:15;
+	font-size:15px;
 	cursor: pointer;
 	border-radius: 8px;
 }
